@@ -1,5 +1,6 @@
 0.12.4
  - fix: error message in preferences user tab no connection available
+ - enh: allow to select upload cache directory in CLI
  - enh: make sure temporary cache directories for uploads are removed
  - setup: bump dclab from 0.49.0 to 0.50.2
 0.12.3
